test/classes/delete-free/owned/owned-record-instantiation-types-user-init-borrows-error.good
owned-record-instantiation-types-user-init-borrows-error.chpl:11: In initializer:
owned-record-instantiation-types-user-init-borrows-error.chpl:12: error: non-lvalue actual is passed to a 'ref' formal of init=()
